--- a/WeChat.iKu.WPF/WeChatStyleDictionary.xaml
+++ b/WeChat.iKu.WPF/WeChatStyleDictionary.xaml
@@ -465,7 +465,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="EmojiStyle" TargetType="{x:Type RadioButton}">
+    <Style x:Key="EmojiStyle" TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{StaticResource ButtonFocusVisual}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
@@ -476,7 +476,7 @@
         <Setter Property="Padding" Value="1"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type RadioButton}">
+                <ControlTemplate TargetType="{x:Type Button}">
                     <Grid Background="White">
                         <Ellipse x:Name="el1" Width="30" Height="30" Stretch="Fill" StrokeThickness="1" Stroke="Gray"/>
                         <Ellipse x:Name="el2" Stretch="Fill" Fill="Gray" Margin="0,0,10,10" Stroke="Gray" StrokeThickness="1" HorizontalAlignment="Center" Height="5" Width="5"/>
@@ -484,7 +484,7 @@
                         <Path x:Name="pa" Data="M 5 18 L 25 18 A 7,5 1 0 1 5,18Z" Fill="Gray" Stroke="Gray" StrokeThickness="1"/>
                     </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsChecked" Value="true">
+                        <!--<Trigger Property="IsChecked" Value="true">
                             <Setter Property="Stroke" Value="Green" TargetName="el1"/>
                             <Setter Property="Stroke" Value="Green" TargetName="el2"/>
                             <Setter Property="Stroke" Value="Green" TargetName="el3"/>
@@ -492,7 +492,7 @@
                             <Setter Property="Fill" Value="Green" TargetName="el3"/>
                             <Setter Property="Fill" Value="Green" TargetName="pa"/>
                             <Setter Property="Stroke" Value="Green" TargetName="pa"/>
-                        </Trigger>
+                        </Trigger>-->
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter Property="Stroke" Value="Green" TargetName="el1"/>
                             <Setter Property="Stroke" Value="Green" TargetName="el2"/>
